--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.9.0
+  flutter_svg: ^1.0.0
+  provider: ^6.0.1
+  fluttertoast: ^8.0.9
+  http: ^0.13.5
+  shared_preferences: ^2.1.0
+  image_picker: ^0.8.7+3
+  flutter_rating_bar: ^4.0.1
+  photo_view: ^0.13.0
+  carousel_slider: ^4.0.0
+  table_calendar: ^3.0.2
 
 dev_dependencies:
   flutter_test:
@@ -60,8 +70,20 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/img/
+    - assets/img/notif/
+    - assets/img/prof/
+    - assets/img/prof/bussines/
+    - assets/img/prof/referal/
+    - assets/img/prof/purse/
+    - assets/img/magazine/
+    - assets/img/hotKesh/
+    - assets/img/category/
+    - assets/img/category_page/
+    - assets/img/category_page/infoIcons/
+    - assets/img/category_page/galery/
+    - assets/img/category_page/comment/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
